Defer loading of CSS and JavaScript, fix CSS flicker with transition

--- a/source/stylesheets/all.css.scss
+++ b/source/stylesheets/all.css.scss
@@ -4,6 +4,9 @@
 @import "font-awesome";
 
 @import url(//fonts.googleapis.com/css?family=Lato:300,400);
+#main {
+  opacity: 1
+}
 body {
   font-family: "Lato", sans-serif;
 }
